new section aded

--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-bannr">
        <div class="half-width">
         <h1>Welcome To </h1>
         <h1><span class="oi">Mohon</span> World</h1>
-      <h3>I want to be a software Inginiar</h3
+      <h3>I want to be a software Inginiar</h3>
         <p>Abul hashem mohon is a senior Contributor of 10 minute school and he is a CTO of MSM and also intern at Programming Hero.<p>
+            <a class="button" target="_blank" href="https://bangla2.programming-hero.com/course-status/">More About</a>
         </div>
             <div class="half-width">
             <img src="images/jhankar.png" alt=""> 
         </div>
+        </section>
+        <section class="dream">
+
+            <div class="half-width">
+                <img src="images/jhankar2.png"
+            </div>
+
+            <div class="half-width">
+        
+            </div>
         </section>
     
 </body>
