--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <div class="half-width">
         <h1>Welcome To </h1>
         <h1><span class="oi">Mohon</span> World</h1>
-      <h3>I want to be a software Inginiar</h3>
+      <h3>I want to be a software Engineer</h3>
         <p>Abul hashem mohon is a senior Contributor of 10 minute school and he is a CTO of MSM and also intern at Programming Hero.<p>
             <a class="button" target="_blank" href="https://bangla2.programming-hero.com/course-status/">More About</a>
         </div>
@@ -22,13 +22,30 @@
         <section class="dream">
 
             <div class="half-width">
-                <img src="images/jhankar2.png"
+                <img src="images/jhankar2.png">
             </div>
-
             <div class="half-width">
-        
+                <h2>My Dream</h2>
+                <h3>I want to be a software Engineer</h3>
+                <p>Abul hashem mohon is a senior Contributor of 10 minute school and he is a CTO of MSM and also intern at Programming Hero.<p>
+                    <a class="button" target="_blank" href="https://bangla2.programming-hero.com/course-status/">About Dream</a>
             </div>
         </section>
-    
+    <section class="Experiences">
+        <h1>Experiences</h1>
+        <div id="full-stack" class="half-width single-ex">
+            <h2>Contributor</h2>
+            <h3 class="oi">2019-present</h3>
+            <p>Abul hashem mohon is a senior Contributor of 10 minute school and he is a CTO of MSM and also intern at Programming Hero</p>
+        </div>
+        <div id="Amba" class="half-width single-ex">
+            <h2>Ambassador</h2>
+            <h3 class="oi">2018-present</h3>
+            <p>Abul hashem mohon is a senior Contributor of 10 minute school and he is a CTO of MSM and also intern at Programming Hero</p>
+        </div>
+    </section>
+    <footer>
+        <p>Mohon al right reserves</p>
+    </footer>
 </body>
 </html>
