--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </section>
     <footer>
-        <p>Mohon al right reserves</p>
+        <p>Mohon right reserves</p>
     </footer>
 </body>
 </html>
